--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asghar Builders | Building Trust. Creating Landmarks.</title>
+    <meta name="description" content="Asghar Builders is a premium real estate and construction company in Pakistan, delivering luxury residential and commercial landmarks with trust and excellence." />
+    <meta name="keywords" content="Asghar Builders, Real Estate Pakistan, Construction Company, Luxury Apartments Islamabad, Property Investment, Builders in Lahore" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +15,7 @@
         font-family: 'Inter', sans-serif;
         background-color: #030712;
         color: #f9fafb;
+        margin: 0;
       }
       h1, h2, h3, h4, h5, h6 {
         font-family: 'Montserrat', sans-serif;
@@ -38,21 +40,38 @@
         0% { background-position: -200% 0; }
         100% { background-position: 200% 0; }
       }
+      /* Ensure root is visible */
+      #root {
+        min-height: 100vh;
+      }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react-router-dom": "https://esm.sh/react-router-dom@7.1.0?external=react,react-dom",
+    "@google/genai": "https://esm.sh/@google/genai@1.3.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0"
+    "react/": "https://esm.sh/react@^19.2.4/"
   }
 }
 </script>
-</head>
+    <script>
+      // Polyfill process for browser environment to prevent ReferenceErrors
+      window.process = {
+        env: {
+          NODE_ENV: 'production',
+          API_KEY: '' // This will be handled by the environment if provided
+        }
+      };
+    </script>
+  </head>
   <body>
     <div id="root"></div>
+    <!-- Entry point script -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
