--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asghar Builders | Building Trust. Creating Landmarks.</title>
-    <meta name="description" content="Asghar Builders is a premium real estate and construction company in Pakistan, delivering luxury residential and commercial landmarks with trust and excellence." />
-    <meta name="keywords" content="Asghar Builders, Real Estate Pakistan, Construction Company, Luxury Apartments Islamabad, Property Investment, Builders in Lahore" />
+    <meta name="description" content="Asghar Builders is a premium real estate and construction company in Karachi, Pakistan, delivering luxury residential and commercial landmarks with trust and excellence." />
+    <meta name="keywords" content="Asghar Builders, Real Estate Karachi, Construction Company Karachi, Ali Arcade, Al Kauser Residency, Luxury Apartments Karachi" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,9 +41,22 @@
         0% { background-position: -200% 0; }
         100% { background-position: 200% 0; }
       }
-      /* Ensure root is visible */
       #root {
         min-height: 100vh;
+      }
+      /* Custom scrollbar for premium feel */
+      ::-webkit-scrollbar {
+        width: 8px;
+      }
+      ::-webkit-scrollbar-track {
+        background: #030712;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #1e293b;
+        border-radius: 10px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #fbbf24;
       }
     </style>
     <script type="importmap">
@@ -55,23 +69,23 @@
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/"
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
     <script>
-      // Polyfill process for browser environment to prevent ReferenceErrors
       window.process = {
         env: {
           NODE_ENV: 'production',
-          API_KEY: '' // This will be handled by the environment if provided
+          API_KEY: ''
         }
       };
     </script>
   </head>
   <body>
     <div id="root"></div>
-    <!-- Entry point script -->
     <script type="module" src="./index.tsx"></script>
   </body>
 </html>
