--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "react-router-dom": "https://esm.sh/react-router-dom@7.1.0?external=react,react-dom",
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.47.10",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
@@ -79,7 +80,9 @@
       window.process = {
         env: {
           NODE_ENV: 'production',
-          API_KEY: ''
+          API_KEY: '',
+          SUPABASE_URL: 'https://gjvgczueyvhifiollnsg.supabase.co',
+          SUPABASE_ANON_KEY: 'sb_publishable_5H5Dcfo3wOwowyQkgDABRw_eBqkf6dk'
         }
       };
     </script>
